--- a/kup/14-pro-max.html
+++ b/kup/14-pro-max.html
@@ -122,10 +122,10 @@
               <p>
                  Stan: Używany, bardzo dobry
               </p>
-<p>Cena produktu: 3190 zł <br><br> <a class="button" href="https://telefonki.shop/zloz-zamowienie"> Złóż zamówienie</a></p>
-<br> Do magazynu dotarł iPhone 14 Pro Max zakupiony w Grudniu 2022 roku. Pamięć wewnętrzna urządzenia to 512 GB. Telefon dla starego właściciela był już nudny i postanowił przenieść się na lepszy model. <br>
-IMEI produktu to: 351344351844722, niestety produkt nie posiada gwarancji producenta dlatego cena produktu jest niska. Mogą występować drobne zarysowania ekranu lub obudowy, <br>
-jednak są one mało widoczne. Zdjęcia produktu poniżej: <br>
+<p>Cena produktu: 3190 zł <br><br> <a class="button" href="https://telefonki.shop/zloz-zamowienie"> Złóż zamówienie</a></p><br>
+<br> Do magazynu dotarł iPhone 14 Pro Max zakupiony w Grudniu 2022 roku. Pamięć wewnętrzna urządzenia to 512 GB. <br> Telefon dla starego właściciela był już nudny i postanowił przenieść się na lepszy model. <br>
+IMEI produktu to: 351344351844722, niestety produkt nie posiada gwarancji producenta dlatego cena produktu jest niska. <br><br>Mogą występować drobne zarysowania ekranu lub obudowy, <br>
+jednak są one mało widoczne. Zdjęcia produktu poniżej: <br><br>
 <img src="https://i.ebayimg.com/images/g/TqgAAOSwHc1l7QeA/s-l1600.jpg" width="50%"/>
 <img src="https://i.ebayimg.com/images/g/dZoAAOSw3Ndl7QeC/s-l1600.jpg" width="50%"/>
 <img src="https://i.ebayimg.com/images/g/DZUAAOSwNNRl7QeE/s-l1600.jpg" width="50%"/>
